fixed what to upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-Binaries
-DerivedDataCache
-Intermediate
-Saved
-.vscode
-.vs
+Binaries/
+DerivedDataCache/
+Intermediate/
+Saved/
+.vscode/
+.vs/
+.idea/
 *.VC.db
 *.opensdf
 *.opendb
