--- a/Nexus.uproject
+++ b/Nexus.uproject
@@ -59,10 +59,6 @@
 			"Enabled": false
 		},
 		{
-			"Name": "VisualStudioCodeSourceCodeAccess",
-			"Enabled": false
-		},
-		{
 			"Name": "XCodeSourceCodeAccess",
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
@@ -206,18 +202,6 @@
 			"Enabled": true
 		},
 		{
-			"Name": "OpenCV",
-			"Enabled": true
-		},
-		{
-			"Name": "Composite",
-			"Enabled": true
-		},
-		{
-			"Name": "OpenCVLensDistortion",
-			"Enabled": true
-		},
-		{
 			"Name": "FastBuildController",
 			"Enabled": true
 		},
@@ -226,15 +210,7 @@
 			"Enabled": true
 		},
 		{
-			"Name": "AnimationLocomotionLibrary",
-			"Enabled": true
-		},
-		{
 			"Name": "AnimationBudgetAllocator",
-			"Enabled": true
-		},
-		{
-			"Name": "AnimToTexture",
 			"Enabled": true
 		},
 		{
@@ -263,6 +239,51 @@
 		{
 			"Name": "Bridge",
 			"Enabled": false
+		},
+		{
+			"Name": "ActorSequence",
+			"Enabled": false
+		},
+		{
+			"Name": "AudioInsights",
+			"Enabled": false
+		},
+		{
+			"Name": "Synthesis",
+			"Enabled": false
+		},
+		{
+			"Name": "AudioWidgets",
+			"Enabled": true
+		},
+		{
+			"Name": "ResonanceAudio",
+			"Enabled": false
+		},
+		{
+			"Name": "FacialAnimation",
+			"Enabled": false
+		},
+		{
+			"Name": "UdpMessaging",
+			"Enabled": false
+		},
+		{
+			"Name": "TcpMessaging",
+			"Enabled": false
+		},
+		{
+			"Name": "LocalizableMessage",
+			"Enabled": false
+		},
+		{
+			"Name": "ProjectLauncher",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Linux",
+				"Mac"
+			]
 		}
 	]
 }
